--- a/css/styles.css
+++ b/css/styles.css
@@ -691,7 +691,7 @@ textarea:focus {
 @media print {
     * {
         -webkit-print-color-adjust: exact !important;
-        color-adjust: exact !important;
+        print-color-adjust: exact !important;
     }
     
     .no-print {
